<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_l"
    tools:context=".ui.result.ScanResultFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_l">

            <TextView
                android:id="@+id/text_result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_result"
                style="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:id="@+id/text_scan_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                tools:text="QR Code"
                style="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:id="@+id/text_scan_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:padding="@dimen/spacing_m"
                android:background="@drawable/bg_result_content"
                tools:text="https://github.com/qoogletr/Rota"
                style="@style/ScanResultText" />

            <TextView
                android:id="@+id/text_scan_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:gravity="end"
                tools:text="12 Mart 2025, 15:30"
                style="@style/TextAppearance.Material3.BodySmall" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_result">

        <Button
            android:id="@+id/button_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_s"
            android:layout_weight="1"
            android:text="@string/copy"
            app:icon="@drawable/ic_copy"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_s"
            android:layout_weight="1"
            android:text="@string/share"
            app:icon="@drawable/ic_share"
            style="@style/ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/button_scan_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_l"
        android:text="@string/scan_again"
        app:icon="@drawable/ic_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.Button.OutlinedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
